--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,9 @@
     -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.1/css/bulma.min.css">
     <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
-    <link href="https://fonts.googleapis.com/css?family=Merriweather" rel="stylesheet">
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
+    <!-- <link href="https://fonts.googleapis.com/css?family=Merriweather" rel="stylesheet">
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json"> -->
+    <link href="https://fonts.googleapis.com/css?family=IM+Fell+English+SC" rel="stylesheet">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
